# justthreed

./: .gitignore  README.md
.github/: FUNDING.yml
extension/: __init__.py  blender_manifest.toml
mcp_server/: README.md  pyproject.toml
mcp_server/src/justthreed/: __init__.py  ml_pipeline.py  server.py
photoshop/: build_mockup_psd.jsx
scripts/: test_socket.py
