[project]
name = "justthreed"
version = "0.1.0"
description = "MCP server that exposes Blender control tools to AI clients"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Phanindhra Kondru" },
]
dependencies = [
  "mcp[cli]>=1.0",
]

[project.scripts]
justthreed = "justthreed.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/justthreed"]
